test/parser/template/113.hac
// "113.hac"
// copy-modified from "112.hac"
// expect fail

template <><pint M, N, d[M][N]; preal D>
defproc foo(chan?() Cin; chan!() Cout; chan!(int) R) { }

// error: wrong number of relaxed parameters
foo A;
A<2>;

// @haco-flags@ -f case-collision=ignore
